--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 
 @import '../node_modules/bulma/css/bulma.min.css';
+@import '../node_modules/bulma-social/css/all.min.css';
+@import '../node_modules/@fortawesome/fontawesome-free/css/brands.min.css';
 
 html, body {
   height: 100%;
   background:linear-gradient(rgba(0,0,100,0.5),transparent);
   background-color:darkgreen; 
+  background-repeat: no-repeat;
 }
 
 .main {
@@ -25,21 +28,3 @@ body > footer {
   box-shadow: 3px 3px 3px rgba(170, 170, 170, 0.3);
 }
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  padding: 1rem;
-  width: 100%;
-  background:linear-gradient(white,transparent);
-  box-shadow: 0px -3px 3px rgba(170, 170, 170, 0.3);
-}
-
-.navbar {
-  background:linear-gradient(to top, white,transparent);
-  box-shadow: 0px 3px 3px rgba(170, 170, 170, 0.3);
-}
-
-.navbar-item {
-  background:linear-gradient(to top, white,transparent);
-  box-shadow: 0px 3px 3px rgba(170, 170, 170, 0.3);
-}
