--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 @import '../node_modules/bulma/css/bulma.min.css';
 @import '../node_modules/bulma-social/css/all.min.css';
 @import '../node_modules/@fortawesome/fontawesome-free/css/brands.min.css';
-@import url('https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@100;200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@100;200;300&display=swap');
 
 html, body {
   height: 100%;
